--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
     "private": true,
-    "scripts": {
-        "start": "webpack-dev-server",
-        "build": "webpack",
-        "test:live": "webpack-dev-server --config ./webpack.tests.js",
-        "pretest": "fable-splitter --config splitter.tests.js",
-        "test": "mocha ./tests-js"
-    },
-    "dependencies": {
-        "@material-ui/core": "^4.10.2",
-        "@material-ui/lab": "^4.0.0-alpha.53",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "remotedev": "^0.2.9"
-    },
     "devDependencies": {
-        "@babel/core": "^7.7.0",
-        "@babel/plugin-transform-runtime": "^7.4.4",
-        "@babel/polyfill": "^7.7.0",
-        "@babel/preset-env": "^7.7.1",
-        "@babel/preset-react": "^7.7.4",
-        "@babel/runtime": "^7.7.1",
-        "babel-loader": "^8.0.5",
-        "copy-webpack-plugin": "^5.1.1",
-        "core-js": "^3.3.6",
-        "css-loader": "^3.2.0",
+        "@babel/core": "^7.10.3",
+        "@babel/plugin-transform-runtime": "^7.10.3",
+        "@babel/polyfill": "^7.10.1",
+        "@babel/preset-env": "^7.10.3",
+        "@babel/runtime": "^7.10.3",
+        "@fortawesome/fontawesome-free": "^5.13.1",
+        "@sinonjs/fake-timers": "^6.0.1",
+        "@testing-library/react": "^10.3.0",
+        "@testing-library/user-event": "^12.0.2",
+        "babel-loader": "^8.1.0",
+        "bulma": "^0.9.0",
+        "copy-webpack-plugin": "^6.0.2",
+        "core-js": "^3.6.5",
+        "css-loader": "^3.6.0",
         "fable-compiler": "^2.10.1",
         "fable-loader": "^2.1.9",
-        "fable-splitter": "^2.2.0",
-        "file-loader": "^4.2.0",
-        "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "^0.8.0",
-        "mocha": "^7.2.0",
-        "sass": "^1.23.3",
-        "sass-loader": "^8.0.0",
-        "style-loader": "^1.0.0",
-        "terser": "^4.3.9",
-        "webpack": "^4.39.0",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.11.0"
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "open-sans-fonts": "^1.6.2",
+        "prettier": "^2.0.5",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "remotedev": "^0.2.9",
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.26.8",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.2.1",
+        "terser": "^4.8.0",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "whatwg-fetch": "^3.0.0"
+    },
+    "dependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.10.1",
+        "@material-ui/core": "^4.10.2",
+        "@testing-library/jest-dom": "^5.10.1",
+        "jest": "^26.0.1"
     }
 }
