--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -9,18 +9,28 @@
         <None Include="paket.references" />
         <None Include="style.scss" />
         <Compile Include="..\Shared\Shared.fs" />
+        <Compile Include="Routes.fs" />
         <Compile Include="Version.fs" />
 
-        <Compile Include="./components/AppBar/AppBar.fs" />
-        <Compile Include="./components/SideNav/SideNav.fs" />
-        <Compile Include="./components/Footer/Footer.fs" />
+        <Compile Include="utils/LocalStorage.fs" />
+        <Compile Include="utils/FunctionalComponent.fs" />
 
-        <Compile Include="Client.fs" />
+        <Compile Include="components/Menu/Menu.fs" />
+        <Compile Include="components/AppBar/AppBar.fs" />
+        <Compile Include="components/SideNav/SideNav.fs" />
+        <Compile Include="components/Footer/Footer.fs" />
+
+        <Compile Include="routes/Home.fs" />
+        <Compile Include="routes/Login.fs" />
+
+        <Compile Include="Base.fs" />
+
+        <Compile Include="App.fs" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Fable.Jester" Version="0.22.0" />
-      <PackageReference Include="Fable.MaterialUI" Version="4.1.0" />
-      <PackageReference Include="Fable.ReactTestingLibrary" Version="0.22.0" />
+        <PackageReference Include="Fable.Jester" Version="0.22.0" />
+        <PackageReference Include="Fable.MaterialUI" Version="4.1.0" />
+        <PackageReference Include="Fable.ReactTestingLibrary" Version="0.22.0" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
