--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
     <ItemGroup>
         <None Include="paket.references" />
-        <Compile Include="..\Shared\Shared.fs" />
+		<Compile Include="../Shared/Shared.fs" />
         <Compile Include="Server.fs" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
